Network/Ingress/templates/GatewayLabPass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-tls
  namespace: core-prod
  # gitpods.writemy.codes,*.gitpods.writemy.codes,*.ws.gitpods.writemy.codes

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  gatewayClassName: cilium

  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 66.165.222.104
      io.cilium/lb-ipam-sharing-key: ingress-tls
      io.cilium/lb-ipam-ips: 66.165.222.104

  listeners:
    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.writemy.codes'
      name: gitpods-root
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.gitpods.writemy.codes'
      name: gitpods-wild
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.ws.gitpods.writemy.codes'
      name: gitpods-workspace
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode
